--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -34,7 +34,7 @@
   name = "github.com/stvp/slug"
 
 [[constraint]]
-  name = "gopkg.in/russross/blackfriday.v2"
+  name = "github.com/russross/blackfriday"
   version = "2.0.0"
 
 [[constraint]]
