--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
   - name: deps
     path: /go
   commands:
-  - go test -race -coverprofile=coverage.txt -covermode=atomic
+  - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
   environment:
     GO111MODULE: "on"
 
@@ -45,7 +45,7 @@ steps:
     token:
       from_secret: telegram_token
     message: >
-      *{{repo.name}}*  
+      *{{repo.name}}*   
       [Build {{build.number}}]({{build.link}}) by {{commit.author}} {{#success build.status}}succeeded{{else}}failed{{/success}} in {{buildtime build.started}}  
       `{{truncate commit.sha 8}}`: "{{commit.message}}"
   when:
