--- a/.drone.yml
+++ b/.drone.yml
@@ -19,11 +19,12 @@ steps:
 - name: linter
   image: golang:latest
   volumes:
-  - name: deps
-    path: /go
+    - name: deps
+      path: /go
   commands:
-  - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.27.0
-  - ./bin/golangci-lint run
+    - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s
+    - ./bin/golangci-lint run --timeout 5m
+    - rm -r ./bin/
 
 - name: coverage
   image: plugins/codecov
@@ -41,8 +42,8 @@ steps:
     token:
       from_secret: telegram_token
     message: >
-      *{{repo.name}}*   
-      [Build {{build.number}}]({{build.link}}) by {{commit.author}} {{#success build.status}}succeeded{{else}}failed{{/success}} in {{buildtime build.started}}  
+      *{{repo.name}}*
+      [Build {{build.number}}]({{build.link}}) by {{commit.author}} {{#success build.status}}succeeded{{else}}failed{{/success}} in {{buildtime build.started}}
       `{{truncate commit.sha 8}}`: "{{commit.message}}"
   when:
     status:
