--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,27 +1,43 @@
+version: 2
+
+before:
+  hooks:
+    - go mod tidy
+
 builds:
-- env:
-  - CGO_ENABLED=0
-  goos: [linux]
-  goarch: [amd64, arm, arm64, 386]
-  goarm: [6, 7]
-archive:
-  wrap_in_directory: true
-  format: tar.gz
-  replacements:
-    386: i386
-    amd64: x86_64
-  files:
-    - examples/**/*
-    - templates/**/*
-    - assets/**/*
-    - pages/**/*
-checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ .Tag }}-next"
+  - goarch: [amd64, arm, arm64, 386]
+    goarm: [6, 7]
+    goos: [linux]
+    ignore:
+      - goos: darwin
+        goarch: 386
+    env:
+      - CGO_ENABLED=0
+    ldflags:
+      - -s -w
+      - -X 'github.com/Depado/smallblog/cmd.Version={{ .Version }}'
+      - -X 'github.com/Depado/smallblog/cmd.Build={{ .Commit }}'
+      - -X 'github.com/Depado/smallblog/cmd.Time={{ .Date }}'
+
+archives:
+  - format: tar.gz
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    format_overrides:
+      - goos: windows
+        format: zip
+    files:
+      - templates/**
+      - assets/**
+
 changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
+      - "^docs:"
+      - "^test:"
