chore(ci): merge golang with golangci

--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -3,7 +3,10 @@ name: golang
 on:
   pull_request:
   push:
-    branches: ["main"]
+    branches: [main]
+
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -29,3 +32,18 @@ jobs:
         with:
           coverage-threshold: 80
           cover-pkg: ./...
+
+  golangci:
+    needs: build
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: stable
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
+          args: --timeout=3m
